tools/Caio.h

long WINAPI AioSetAoEvent(short Id, HWND hWnd, long AoEvent);
long WINAPI AioGetAoEvent(short Id, HWND * hWnd, long * AoEvent);
long WINAPI AioSetAoEventSamplingTimes(short Id, long AoSamplingTimes);
long WINAPI AioGetAoEventSamplingTimes(short Id, long * AoSamplingTimes);
long WINAPI AioSetAoEventTransferTimes(short Id, long AoTransferTimes);
long WINAPI AioGetAoEventTransferTimes(short Id, long *AoTransferTimes);
long WINAPI AioStartAo(short Id);
long WINAPI AioStopAo(short Id);
long WINAPI AioEnableAo(short Id, short AoChannel);
long WINAPI AioDisableAo(short Id, short AoChannel);
long WINAPI AioGetAoStatus(short Id, long * AoStatus);
long WINAPI AioGetAoSamplingCount(short Id, long * AoSamplingCount);
long WINAPI AioGetAoTransferCount(short Id, long *AoTransferCount);
long WINAPI AioGetAoTransferLap(short Id, long *Lap);
long WINAPI AioGetAoRepeatCount(short Id, long * AoRepeatCount);
long WINAPI AioResetAoStatus(short Id);
long WINAPI AioResetAoMemory(short Id);
//デジタル入出力関数
long WINAPI AioSetDiFilter(short Id, short Bit, float Value);
long WINAPI AioGetDiFilter(short Id, short Bit, float *Value);
long WINAPI AioInputDiBit(short Id, short DiBit, short * DiData);
long WINAPI AioOutputDoBit(short Id, short DoBit, short DoData);
long WINAPI AioInputDiByte(short Id, short DiPort, short * DiData);
long WINAPI AioOutputDoByte(short Id, short DoPort, short DoData);
long WINAPI AioSetDioDirection(short Id, long Dir);
//カウンタ関数
long WINAPI AioGetCntMaxChannels(short Id, short * CntMaxChannels);
long WINAPI AioSetCntComparisonMode(short Id, short CntChannel, short CntMode);
long WINAPI AioGetCntComparisonMode(short Id, short CntChannel, short *CntMode);
long WINAPI AioSetCntPresetReg(short Id, short CntChannel, long PresetNumber, long *PresetData, short Flag);
long WINAPI AioSetCntComparisonReg(short Id, short CntChannel, long ComparisonNumber, long *ComparisonData, short Flag);
long WINAPI AioSetCntInputSignal(short Id, short CntChannel, short CntInputSignal);
long WINAPI AioGetCntInputSignal(short Id, short CntChannel, short *CntInputSignal);
long WINAPI AioSetCntEvent(short Id, short CntChannel, HWND hWnd, long CntEvent);
long WINAPI AioGetCntEvent(short Id, short CntChannel, HWND *hWnd, long *CntEvent);
long WINAPI AioSetCntFilter(short Id, short CntChannel, short Signal, float Value);
long WINAPI AioGetCntFilter(short Id, short CntChannel, short Signal, float *Value);
long WINAPI AioStartCnt(short Id, short CntChannel);
long WINAPI AioStopCnt(short Id, short CntChannel);
long WINAPI AioPresetCnt(short Id, short CntChannel, long PresetData);
long WINAPI AioGetCntStatus(short Id, short CntChannel, long *CntStatus);
long WINAPI AioGetCntCount(short Id, short CntChannel, long *Count);
long WINAPI AioResetCntStatus(short Id, short CntChannel, long CntStatus);
//タイマ関数
long WINAPI AioSetTmEvent(short Id, short TimerId, HWND hWnd, long TmEvent);
long WINAPI AioGetTmEvent(short Id, short TimerId, HWND * hWnd, long * TmEvent);
long WINAPI AioStartTmTimer(short Id, short TimerId, float Interval);
long WINAPI AioStopTmTimer(short Id, short TimerId);
long WINAPI AioStartTmCount(short Id, short TimerId);
long WINAPI AioStopTmCount(short Id, short TimerId);
long WINAPI AioLapTmCount(short Id, short TimerId, long *Lap);
long WINAPI AioResetTmCount(short Id, short TimerId);
long WINAPI AioTmWait(short Id, short TimerId, long Wait);
//イベントコントローラ
long WINAPI AioSetEcuSignal(short Id, short Destination, short Source);
long WINAPI AioGetEcuSignal(short Id, short Destination, short *Source);
long WINAPI AioSelectCntmChannelSignal(short Id, short ChNo, short SigType);