tools/aio_funcs.py

DLL.AioSetAoEvent.argtypes = [ctypes.c_short, ctypes.c_int, ctypes.c_long]
DLL.AioGetAoEvent.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_long)]
DLL.AioSetAoEventSamplingTimes.argtypes = [ctypes.c_short, ctypes.c_long]
DLL.AioGetAoEventSamplingTimes.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioSetAoEventTransferTimes.argtypes = [ctypes.c_short, ctypes.c_long]
DLL.AioGetAoEventTransferTimes.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioStartAo.argtypes = [ctypes.c_short]
DLL.AioStopAo.argtypes = [ctypes.c_short]
DLL.AioEnableAo.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioDisableAo.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioGetAoStatus.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetAoSamplingCount.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetAoTransferCount.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetAoTransferLap.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetAoRepeatCount.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioResetAoStatus.argtypes = [ctypes.c_short]
DLL.AioResetAoMemory.argtypes = [ctypes.c_short]
DLL.AioSetDiFilter.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_float]
DLL.AioGetDiFilter.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_float)]
DLL.AioInputDiBit.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioOutputDoBit.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
DLL.AioInputDiByte.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioOutputDoByte.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
DLL.AioSetDioDirection.argtypes = [ctypes.c_short, ctypes.c_long]
DLL.AioGetDioDirectio.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetCntMaxChannels.argtypes = [ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioSetCntComparisonMode.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
DLL.AioGetCntComparisonMode.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioSetCntPresetReg.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_long, ctypes.POINTER(ctypes.c_long), ctypes.c_short]
DLL.AioSetCntComparisonReg.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_long, ctypes.POINTER(ctypes.c_long), ctypes.c_short]
DLL.AioSetCntInputSignal.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
DLL.AioGetCntInputSignal.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioSetCntEvent.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_int, ctypes.c_long]
DLL.AioGetCntEvent.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_long)]
DLL.AioSetCntFilter.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short, ctypes.c_float]
DLL.AioGetCntFilter.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_float)]
DLL.AioStartCnt.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioStopCnt.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioPresetCnt.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_long]
DLL.AioGetCntStatus.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioGetCntCount.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioResetCntStatus.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_long]
DLL.AioSetTmEvent.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_int, ctypes.c_long]
DLL.AioGetTmEvent.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_long)]
DLL.AioStartTmTimer.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_float]
DLL.AioStopTmTimer.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioStartTmCount.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioStopTmCount.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioLapTmCount.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_long)]
DLL.AioResetTmCount.argtypes = [ctypes.c_short, ctypes.c_short]
DLL.AioTmWait.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_long]
DLL.AioSetEcuSignal.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
DLL.AioGetEcuSignal.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.POINTER(ctypes.c_short)]
DLL.AioSelectCntmChannelSignal.argtypes = [ctypes.c_short, ctypes.c_short, ctypes.c_short]
